--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,6 +63,66 @@
 }
 
 @layer components {
+  .background-image-radial {
+    background: radial-gradient(
+      64.4% 50% at 50.6% 56.2%,
+      rgba(255, 255, 255, 0) 0%,
+      rgb(255, 255, 255) 100%
+    );
+    flex: 0 0 auto;
+    height: 100%;
+    left: calc(2.13163e-14%);
+    overflow: hidden;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    z-index: 1;
+  }
+}
+
+@layer components {
+  .background-image-radial-container {
+    flex: 0 0 auto;
+    height: 60%;
+    left: calc(2.13163e-14%);
+    position: absolute;
+    top: calc(20%);
+    width: 100%;
+    z-index: 0;
+  }
+}
+
+@layer components {
+  .background-graphic {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    background-image: linear-gradient(
+        rgba(235, 235, 235, 0.8) 2px,
+        transparent 2px
+      ),
+      linear-gradient(90deg, rgba(235, 235, 235, 0.8) 2px, transparent 2px),
+      linear-gradient(rgba(235, 235, 235, 0.8) 1px, transparent 1px),
+      linear-gradient(
+        90deg,
+        rgba(235, 235, 235, 0.8) 1px,
+        rgba(255, 255, 255, 0) 1px
+      );
+    background-position:
+      -2px -2px,
+      -2px -2px,
+      -1px -1px,
+      -1px -1px;
+    background-size:
+      150px 150px,
+      150px 150px,
+      30px 30px,
+      30px 30px;
+    border-radius: 0px;
+  }
+}
+
+@layer components {
   .nav-stroke {
     position: absolute;
     bottom: 0;
