--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,7 +82,10 @@
 
 @layer components {
   .background-image-radial-grey {
-    background: radial-gradient(64.4% 50% at 50.6% 56.2%, rgba(255, 255, 255, 0) 0%, rgb(231 231 231 / 90%) 0.1%)
+    background: radial-gradient(
+      64.4% 50% at 50.6% 56.2%,
+      rgba(255, 255, 255, 0) 0%,
+      rgb(231 231 231 / 10%) 0.1%
     );
     flex: 0 0 auto;
     height: 100%;
