Upadted ButtonSecoundary color.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,21 @@
 }
 
 @layer components {
+  .button-Secoundary {
+    box-shadow:
+      rgba(11, 64, 143, 0.72) 0px 0.602187px 3.01094px -1.25px inset,
+      rgba(11, 64, 143, 0.635) 0px 2.28853px 11.4427px -2.5px inset,
+      rgba(11, 64, 143, 0.25) 0px 10px 50px -3.75px inset,
+      rgba(0, 0, 0, 0.184) 0px 0.796192px 0.796192px -0.9375px,
+      rgba(0, 0, 0, 0.173) 0px 2.41451px 2.41451px -1.875px,
+      rgba(0, 0, 0, 0.15) 0px 6.38265px 6.38265px -2.8125px,
+      rgba(0, 0, 0, 0.063) 0px 20px 20px -3.75px,
+      rgba(255, 231, 222, 0.25) 0px -6px 8px 0px inset;
+    background-color: rgb(0, 31, 51);
+    border-radius: 16px;
+  }
+}
+@layer components {
   .button-Secoundary-hover {
     content: "";
     display: block;
