--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,7 @@
   .button-primary-hover {
     content: "";
     display: block;
+    border-radius: 16px;
     width: 100%;
     height: 100%;
     background: #ff4e00;
